--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "@tabler/icons-react": "3.1.0",
     "axios": "1.6.8",
-    "bootstrap": "5.3.3",
+    "bootstrap": "^5.3.3",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "1.72.0",
+    "sass": "^1.72.0",
     "sweetalert2": "11.10.7"
   },
   "devDependencies": {
