--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-swipeable": "^7.0.2",
     "sass": "^1.72.0",
     "sweetalert2": "11.10.7"
   },
