--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@tabler/icons-react": "3.1.0",
     "axios": "1.6.8",
     "bootstrap": "5.3.3",
-    "chart.js": "4.4.2",
+    "chart.js": "^4.4.2",
     "next": "14.1.4",
     "react": "^18",
-    "react-chartjs-2": "5.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-swipeable": "^7.0.2",
     "sass": "^1.72.0",
